--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="send">Send</string>
     <string name="clear">Clear</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_contact_page">ContactPageActivity</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_contact_page">Contacts</string>
     <string name="contactTitle">Contacts</string>
     <string name="loginPageTitle">Login Page</string>
     <string name="siteNameTitle">Site Name</string>
