--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,15 @@
     <string name="test_sender">merry</string>
     <string name="test_receiver">pippin</string>
 
+
+
+    <string name="password_label">password</string>
+    <string name="site_label">sitename</string>
+    <string name="contact_label">contact</string>
+    <string name="username_label">username</string>
+    <string name="new_convo_label">new conversation</string>
+    <string name="new_message_label">new message</string>
+    <string name="message_type_label">message type</string>
+    <string name="message_label">message</string>
+
 </resources>
